# cheguers

./: Cargo.toml  LICENSE
cheguers/: Cargo.toml
crates/cheguers/: Cargo.toml
crates/cheguers/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: adjacency.rs  catalog.rs  command.rs  config.rs  core.rs  error.rs  lib.rs  testing.rs  types.rs
crates/core/src/io/: binary.rs  file.rs  header.rs  mod.rs  page.rs
crates/core/src/state/: database.rs  edge_store.rs  edge_table.rs  mod.rs  node_store.rs  node_table.rs
crates/core/src/storage/: adjacency_index.rs  column_chunk.rs  edge_group.rs  edge_store.rs  edge_table.rs  error.rs  mod.rs  node_group.rs  node_store.rs  node_table.rs  page.rs  test_helpers.rs
crates/core/src/table/: chunked_node_group.rs  column.rs  edge.rs  mod.rs  node.rs
docs/: cheguersdb-apresentacao.html  storage-engine-bootstrap.md
docs/paper/: cheguersdb-softwarex.tex
