[workspace]
default-members = ["crates/cheguers"]
members         = ["crates/cheguers", "crates/core"]
resolver        = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

# TODO: Nix? Nerd stuff
# [workspace.metadata.crane]
# name = "cheguers" 

[workspace.dependencies]
core = { path = "crates/core" }
